tests/NormalTests/paczka1/small_fuzzy/63986911.err
Error in line 9: JW3YMmZ A15 40,9
Error in line 15: JW3YMmZ A246 94,8
